Fix letter spacing for p

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,9 @@ img{
 /* header */
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-block{
@@ -356,11 +359,13 @@ img{
 
 .portfolio-item-visualization .overlay{
     position: absolute;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     width: 100%;
-    height: 50%;
+    height: 100%;
     top: 0;
     left: 0;
-    padding: 40px 32px 100% 32px;
+    padding: 40px 32px;
     background-color: #4D5AE5;
     color: #F4F4FD;
     transform: translateY(100%);
